tree-sitter-rgbasm/test/corpus/comments.txt
================================================================================
Comments: line comments
================================================================================

; Full line comment
Start:
    nop     ; End of line comment
    ld a, b ; Another comment

---

(source_file
  (inline_comment)
  (global_label_block
    (global_symbol
      (identifier))
    (instruction_list
      (instruction
        (instruction_name)))
    (inline_comment)
    (instruction_list
      (instruction
        (instruction_name)
        (operand_list
          (register)
          (register))))
    (inline_comment)))

================================================================================
Comments: single-line block comments
================================================================================

/* Single line block comment */
Start:
    ;ld a, 1 :: ld b, 2 /* inline block comment */

---

(source_file
  (block_comment)
  (global_label_block
    (global_symbol
      (identifier))
    (inline_comment)))

================================================================================
Comments: multi-line block comments
================================================================================

/*
 * Multi-line
 * block comment
 */
Start:
    /* Comment before instruction */
    nop
    ld a, b, c

---

(source_file
  (block_comment)
  (global_label_block
    (global_symbol
      (identifier))
    (block_comment)
    (instruction_list
      (instruction
        (instruction_name)))
    (instruction_list
      (instruction
        (instruction_name)
        (operand_list
          (register)
          (register)
          (register))))))

================================================================================
Comments: block comments in expressions
================================================================================

DEF x = 1 /* comment */ + 2
DEF y = /* before */ 3 * /* after */ 4

---

(source_file
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (binary_expression
        (number_literal)
        (block_comment)
        (number_literal))))
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (block_comment)
      (binary_expression
        (number_literal)
        (block_comment)
        (number_literal)))))

================================================================================
Comments: nested and complex cases
================================================================================

; Line comment at start
Start: /* block after label */
    /* Multiple
       lines spanning
       several rows */
    pop /*wait for it*/ hl
    ; Another line comment
    ret

---

(source_file
  (inline_comment)
  (global_label_block
    (global_symbol
      (identifier))
    (block_comment)
    (block_comment)
    (instruction_list
      (instruction
        (instruction_name)
        (block_comment)
        (operand_list
          (register))))
    (inline_comment)
    (instruction_list
      (instruction
        (instruction_name)))))

================================================================================
Comments: comments with special characters
================================================================================

; Comment with special chars: !@#$%^&*()
/* Block comment with
   special: !@#$%^&*() */
Start:
    nop ; End comment with / and *

---

(source_file
  (inline_comment)
  (block_comment)
  (global_label_block
    (global_symbol
      (identifier))
    (instruction_list
      (instruction
        (instruction_name)))
    (inline_comment)))
